# ecb

./: README.md  dev.py  general.py  main.py  pyproject.toml
.state/local/: agricultural_statistics.json  ameco_macroeconomic.json  balance_of_payments.json  balance_payments_geographical_breakdown.json  balance_payments_national.json
assets/agricultural_statistics/: main.py
assets/ameco_macroeconomic/: main.py
assets/balance_of_payments/: main.py
assets/balance_payments_geographical_breakdown/: main.py
assets/balance_payments_national/: main.py
assets/balance_sheet_items/: main.py
assets/bank_lending_survey/: main.py
assets/banking_structural_indicators/: main.py
assets/banking_supervisory_metrics/: main.py
assets/banknotes_circulation/: main.py
assets/blue_book_balance_sheet/: main.py
assets/business_consumer_surveys/: main.py
assets/capital_adequacy_ratios/: main.py
assets/central_counterparty_clearing/: main.py
assets/commercial_property_prices/: main.py
assets/consolidated_banking/: main.py
assets/consolidated_banking_data/: main.py
assets/consumer_price_indices/: main.py
assets/country_financial_stress_index/: main.py
assets/data_warehouse_aggregates/: main.py
assets/dealogic_debt_capital_markets/: main.py
assets/eba_key_risk_indicators/: main.py
assets/ecb_currency_statistics/: main.py
defs/: concepts.json  dataflows.json  dataset_name_mapping.csv  structures.json
scripts/: download_concepts.py  download_dataflows.py  download_structures.py  generate_dataset_name_mapping.py  scaffold_assets.py
(+77 files in other folders)
