[project]
name = "ecb"
version = "0.1.0"
description = "ECB SDMX data connector"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "duckdb>=0.9.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pyiceberg>=0.9.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "tenacity>=8.2.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assets", "scripts"]